libs/image/kis_layer.h
@@ -348,6 +348,21 @@ protected:
     virtual QRect outgoingChangeRect(const QRect &rect) const;
 
     /**
+     * Return need rect that should be prepared on original()
+     * device of the layer to get \p rect on its projection.
+     *
+     * This method is used either for layers that can have other
+     * layers as children (yes, KisGroupLayer, I'm looking at you!),
+     * or for layers that depend on the lower nodes (it's you,
+     * KisAdjustmentLayer!).
+     *
+     * These layers may have some filter masks that need a bit
+     * more pixels than requested, therefore child nodes should do
+     * a bit more work to prepare them.
+     */
+    QRect needRectForOriginal(const QRect &rect) const;
+
+    /**
      * @param rectVariesFlag (out param) a flag, showing whether
      *        a rect varies from mask to mask
      * @return an area that should be updated because of
